--- a/pom.xml
+++ b/pom.xml
@@ -41,8 +41,8 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.machinezoo.hookless</groupId>
-			<artifactId>hookless</artifactId>
-			<version>0.4.0</version>
+			<artifactId>hookless-servlets</artifactId>
+			<version>0.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
