--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.machinezoo.noexception</groupId>
+			<artifactId>noexception</artifactId>
+			<version>1.5.0</version>
+		</dependency>
+		<dependency>
 			<groupId>com.machinezoo.hookless</groupId>
 			<artifactId>hookless</artifactId>
 			<version>0.9.0</version>
