--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,7 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>3.1.1</version>
 				<configuration>
+					<failOnWarnings>true</failOnWarnings>
 					<nohelp>true</nohelp>
 					<noindex>true</noindex>
 					<notree>true</notree>
