--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	<name>PushMode</name>
 	<url>https://pushmode.machinezoo.com/</url>
 	<description>Server-side Java library that streams web app's HTML output down to the browser while user's actions are streamed back to the server.</description>
+	<inceptionYear>2015</inceptionYear>
 
 	<licenses>
 		<license>
@@ -18,6 +19,10 @@
 		</license>
 	</licenses>
 
+	<organization>
+		<name>Robert Važan</name>
+		<url>https://robert.machinezoo.com/</url>
+	</organization>
 	<developers>
 		<developer>
 			<name>Robert Važan</name>
