--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
 			<artifactId>hookless-servlets</artifactId>
 			<version>0.3.0</version>
 		</dependency>
+		<!-- Used for JSON messages exchanged with client-side JS. -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
@@ -64,6 +65,7 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.6</version>
 		</dependency>
+		<!-- Used for URL parsing only. -->
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
