--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.machinezoo.stagean</groupId>
+			<artifactId>stagean</artifactId>
+			<version>1.0.2</version>
+		</dependency>
+		<dependency>
 			<groupId>com.machinezoo.noexception</groupId>
 			<artifactId>noexception</artifactId>
 			<version>1.5.0</version>
