--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,8 @@
 					<!-- Make the CI server email us when we break javadoc. -->
 					<failOnWarnings>true</failOnWarnings>
 					<notimestamp>true</notimestamp>
+					<!-- Internal packages should never show up in javadoc. In the future, they will not be exposed from the module. -->
+					<excludePackageNames>com.machinezoo.pushmode.internal.*</excludePackageNames>
 				</configuration>
 				<executions>
 					<execution>
