--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
 			<artifactId>hookless-servlets</artifactId>
 			<version>0.5.0</version>
 		</dependency>
+		<dependency>
+			<groupId>jakarta.servlet</groupId>
+			<artifactId>jakarta.servlet-api</artifactId>
+			<version>5.0.0</version>
+			<scope>provided</scope>
+		</dependency>
 		<!-- Used for JSON messages exchanged with client-side JS. -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
@@ -107,7 +113,7 @@
 				<!-- JaCoCo plugin is needed to generate Codecov report. -->
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.5</version>
+				<version>0.8.7</version>
 				<executions>
 					<!-- Configuration taken from: https://github.com/codecov/example-java/blob/master/pom.xml#L38-L56 -->
 					<execution>
