--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 jobs:
   build:
-    uses: robertvazan/project-config/.github/workflows/java-build.yml@master
+    uses: robertvazan/rvscaffold/.github/workflows/java-build.yml@master
     with:
       java-version: 11
       test-coverage: true
